# bible-api

./: .gitignore  Cargo.toml  LICENSE  README.md
bibles/: sample.json
src/: main.rs
src/controller/: search.rs
src/middleware/: error_handler.rs
src/model/: bible.rs
src/types/: error.rs
